css/rehack.webflow.css
/* ... */
.main-title {
  margin-top: 15px;
  margin-bottom: 0px;
  padding-right: 10px;
  padding-left: 3px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  align-self: center;
  font-family: Montserrat, sans-serif;
  color: #3f3f3f;
  font-size: 10vh;
  line-height: 9vh;
  font-weight: 700;
  text-align: left;
}

.partners {
  position: relative;
  z-index: 90;
  width: 100%;
  margin-top: 0px;
  margin-bottom: 20px;
  margin-left: 0px;
  padding: 50px 10vh 50px 10vw;
  clear: none;
}

.contact {
  position: relative;
  z-index: 90;
  width: 100%;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  padding: 50px 15vh 50px 10vw;
  clear: none;
  background-color: #ebebeb;
  cursor: default;
}

.contact-form {
  margin-top: 10px;
  padding-top: 20px;
  padding-right: 20px;
  padding-left: 5px;
}

.text-field {
  box-shadow: 0 3px 10px 0 #d9d9d9;
  font-family: Lato, sans-serif;
}

.text-field-2 {
  display: inline-block;
  min-height: 150px;
  padding-top: 13px;
  padding-bottom: 12px;
  box-shadow: 0 3px 10px 0 #d9d9d9;
  font-family: Lato, sans-serif;
  text-align: left;
}

.field-label {
  padding-top: 10px;
}

.feature-wrap-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 90vw;
  margin-top: 8vh;
  margin-bottom: 10vh;
  padding-right: 5vw;
  padding-left: 0vw;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: space-around;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px none #000;
}

.feature-wrap-3.logos {
  height: auto;
  padding-top: 5vh;
  padding-bottom: 5vh;
  border-style: none;
}

.feature-wrap-3.reverse {
  margin-top: 8vh;
  margin-bottom: 8vh;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.feature-wrap-3.icons {
  padding-right: 0vw;
  padding-left: 0vw;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.feature-content-3 {
  width: 50vw;
  max-width: 450px;
  padding-right: 0vw;
  padding-left: 0vw;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border: 1px none #000;
}

.feature-content-3.icons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 33.33%;
  max-width: none;
  padding-right: 30px;
  padding-left: 30px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  text-align: center;
}

.feature-content-3.icons.numbers {
  width: 25%;
}

.image-what-is-rehack {
  padding: 10px 0px 11px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  align-self: center;
  -webkit-box-flex: 0.5;
  -webkit-flex: 0.5 auto;
  -ms-flex: 0.5 auto;
  flex: 0.5 auto;
}

.feature-image-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50vw;
  padding-right: 10px;
  padding-left: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px none #000;
}

.heading-theme {
  margin-top: 15px;
  margin-bottom: 10px;
  padding-right: 11px;
  padding-left: 0px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-family: Montserrat, sans-serif;
  color: #fff;
  font-size: 7.5vh;
  line-height: 9vh;
  font-weight: 700;
  text-align: left;
}

.container-6 {
  display: block;
  margin-top: 20px;
  padding-top: 20px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.columns-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 20px;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.apply-button {
  display: inline-block;
  margin-top: 20px;
  margin-right: 0px;
  padding: 20px 40px;
  border-style: solid;
  border-width: 3px;
  border-color: #2f2fee;
  border-radius: 0px;
  background-color: #3030ee;
  box-shadow: 0 12px 37px -8px #7c7c7c;
  opacity: 1;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  font-family: Lato, sans-serif;
  color: #fff;
  font-size: 16px;
  line-height: 26px;
  font-weight: 600;
  text-align: center;
  cursor: pointer;
}

.apply-button:hover {
  background-color: transparent;
  color: #2f2fee;
}

.apply-button.outline {
  display: inline-block;
  margin-right: 0px;
  margin-bottom: 3px;
  margin-left: 0px;
  border: 3px solid transparent;
  border-radius: 1000px;
  background-color: transparent;
  background-image: -webkit-gradient(linear, left top, left bottom, from(#3030ee), to(#3030ee));
  background-image: linear-gradient(180deg, #3030ee, #3030ee);
  box-shadow: 0 6px 20px 0 #7c7c7c;
  opacity: 1;
  -webkit-transition: color 800ms ease;
  transition: color 800ms ease;
  color: #fff;
  cursor: pointer;
}
/* ... */

